--- a/IEProject/IEProject/IEProject.csproj
+++ b/IEProject/IEProject/IEProject.csproj
@@ -375,6 +375,7 @@
     <Content Include="Views\Home\JourneyPlanner.cshtml" />
     <Content Include="Scripts\leaflet-src.js.map" />
     <Content Include="Scripts\leaflet.js.map" />
+    <Content Include="Views\Home\Support.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
