--- a/IEProject/IEProject/IEProject.csproj
+++ b/IEProject/IEProject/IEProject.csproj
@@ -960,6 +960,8 @@
     <None Include="Properties\PublishProfiles\disability2 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\disability2 - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\disability2 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\disability3 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\disability3 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\mobileimpair - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\mobileimpair - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
